test/libyul/yulSyntaxTests/zkevm/invalid/meta.yul
{
	$zk_meta()
}
// ====
// dialect: evm
// ----
// TypeError 3083: (3-13): Top-level expressions are not supposed to return values (this expression returns 1 value). Use ``pop()`` or assign them.
